--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
   <script type="module" src="./js/modal.js"></script>
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+    <script type="module" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script type="module" src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script type="module" src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 
 
     <!-- <script type="module" src="/main.js"></script> -->
-    <script type="text/javascript">
+    <script type="module">
 	
       function depoCalc (firstDepo, monthDepo, yearPer, investYears){
           if (firstDepo === undefined) {
@@ -501,10 +501,10 @@
     </script>
 
  <!-- <link rel="stylesheet" type="text/css" href="./css/intlTelInput.min.css" /> -->
- <script type="text/javascript" src="./js/telinput/telInput/intlTelInput.min.js"></script>
- <script type="text/javascript" src="./js/telinput/telInput/mask.js"></script>
- <script type="text/javascript" src="./js/telinput/telInput/mask_list.js"></script>
-<script type="text/javascript">
+ <script type="module" src="./js/telinput/telInput/intlTelInput.min.js"></script>
+ <script type="module" src="./js/telinput/telInput/mask.js"></script>
+ <script type="module" src="./js/telinput/telInput/mask_list.js"></script>
+<script type="module">
   var DetectCountry;
                   
   jQuery( document ).ready( function() {
@@ -533,6 +533,6 @@
       }
   }
 </script>
-<script src="https://ipinfo.io/json?callback=autoCountry"></script>
+<script type="module" src="https://ipinfo.io/json?callback=autoCountry"></script>
   </body>
 </html>
